# apo

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  chatgpt-caller.c  plotta.py  run_experiments.sh  setup_metis.sh  sim_from_trace.py  sim_from_trace_test_1.py  sim_from_trace_test_1.py.bck  table1_run.py
.github/workflows/: build.yaml
C/: README.md  a.out  clingo_solver.c  clingo_solver.h  ddm.c  ddm.h  ddm_driver.c  ddm_test  test.c  workload.c
cmake/: FindClingo.cmake  FindMetis.cmake  LibFindMacros.cmake
experiments/: process_table_1.py  table_1.sh
lp/: README.md  ddm.asp  ddm_2.asp  ddm_4.asp  ddm_v4.asp  ddm_v4_init.asp  ddm_v5.asp  ddm_v5_init.asp
metasimulation/: application.py  generate_debug_traces.sh  hardware.py  imbalanced_generator.py  phold_generator.py  sim_from_trace.py  sim_from_trace_ddm.py  surveillance_generator.py  trace_generator.py
metasimulation/SimulationEngine/: assignment.py  commandline.py  read_solutions.py  runtime_modules.py  sim.py  simloop.py
metasimulation/SimulationModel/: State.py  actor.py  event_handlers.py  hardware.py
metasimulation/SimulationParameters/: global_constants.py  hardware.py
metasimulation/Simulator/: sim.py
metasimulation/debug_traces/: lp_8-end_time_50000-fanout_1.trace.solutions  lp_8-end_time_50000-fanout_100.trace.solutions  lp_8-end_time_50000-fanout_500.trace.solutions
metasimulation/simulation_1/: lp_8-end_time_500000-fanout_-1.trace.solutions
metasimulation/simulation_1-non-connected/: plot.plt
metasimulation/simulation_2/: global_constants.py  hardware.py  lp_8-end_time_500000-fanout_10.trace.solutions
metasimulation/simulation_2-ring/: global_constants.py  hardware.py  plot.plt
metasimulation/simulation_3/: global_constants.py  hardware.py  lp_8-end_time_500000-fanout_10.trace.solutions  phold_lp_8-end_time_50000_send_prob_0.5.trace.solutions
metasimulation/simulation_3-chain/: lp_8-end_time_500000-fanout_2.trace.solutions  plot.plt
metasimulation/simulation_4/: plot.plt
metasimulation/simulation_4-surveillance/: global_constants.py  hardware.py  phold_lp_8-end_time_50000_send_prob_0.125.trace.solutions  plot.plt
metasimulation/simulation_5-medium-hotspot/: hardware.py
metasimulation/simulation_6/: hardware.py
metasimulation/simulation_7-micro-hotspot/: hardware.py  plot.plt
metasimulation/simulation_8-small-hotspot-v2/: hardware.py
metasimulation/simulation_TODO_4/: phold_lp_8-end_time_50000.trace_send_prob_0.125.trace.solutions
metasimulation/window_operations/: abstract_operations.py  base_operations.py  ddm_operations.py  metis_capacity_operations.py  metis_communication_operations.py  metis_hete_asplike.py  metis_hete_comm.py  metis_homo_comm.py  metis_homo_node.py  metis_homogeneous_nodes_operations.py  metis_operations.py  metis_overload_operations.py  null_operations.py  random_operations.py  stats_operations.py
model/: application.py  model.py  platform.py
model/mod1/: application.py  hardware.py  platform.py
model/mod2/: application.py  hardware.py
src/: CMakeLists.txt  Makefile  clingo_solver.c  clingo_solver.h  ddm.c  ddm.h  ddm.py  ddm_driver.c  ddmmetis.h  dynstr.c  dynstr.h  metis.py
src/ddmmetis/: CMakeLists.txt  ddmmetis.c  utils.c  utils.h
src/lp/: CMakeLists.txt  README.md  assets.h  ddm.asp  ddm_S1.asp  ddm_S2.asp  ddm_S3.asp  ddm_S4.asp  ddm_S5.asp  ddm_S6.asp  ddm_S7.asp  ddm_c1.asp  ddm_c2.asp  ddm_c3.asp  ddm_c4.asp  ddm_c5.asp  ddm_c6.asp  ddm_c7.asp  ddm_v2.asp  ddm_v3.asp  ddm_v5.asp  ddm_v5_init.asp  ddm_wl_approx.asp  embedfiles.c
src/lp/examples/: ddm_tmp_hotspot.asp  test_ap-pb.asp  test_ap-uw.asp  test_ap-uw_uc.asp  test_ed.asp  test_rm-cr.asp
src/lp/lab/: ddm_c1.asp  ddm_c2.asp  ddm_c3.asp  ddm_c4.asp  ddm_c5.asp  ddm_c6.asp  ddm_c7.asp  ddm_v4.asp  ddm_v5.asp  ddm_v6.asp  test_clingo.asp  test_clingo2.asp
test/: CMakeLists.txt  ddm_stress_test.c  ddm_test.c  ddm_test.py  ddm_test2.c  ddm_test3.c  ddm_test4.c  metis_test.c  metis_test.py  metis_test2.c  workload.c
